syntax = "proto3";

import "google/protobuf/wrappers.proto";
option csharp_namespace = "GrpcIt";


service SerialPort {
	rpc Connect (stream SerialPortConnectRequest) returns (stream google.protobuf.BytesValue);
}

message SerialPortConnectRequest
{
	oneof value {
		SerialPortOptions options = 1;
		google.protobuf.BytesValue data = 2;
	}
}

message SerialPortOptions
{
	string PortName = 1;
	uint32 BaudRate = 2;
}
